--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:ui": "rm -rf dist && cd ../part1 && npm run build && cp -r dist ../part1backend",
-    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
+    "lint": "eslint ."
   },
   "author": "Albert",
   "license": "ISC",
@@ -19,6 +20,13 @@
     "mongoose": "^8.4.4"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "@eslint/compat": "^1.1.0",
+    "@eslint/js": "^9.5.0",
+    "@stylistic/eslint-plugin-js": "^2.3.0",
+    "eslint": "^9.5.0",
+    "eslint-plugin-react": "^7.34.3",
+    "globals": "^15.6.0",
+    "nodemon": "^3.1.4",
+    "typescript-eslint": "^7.14.1"
   }
 }
